<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AdventureBook</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">Title</string>
    <string name="story_description">Story Description</string>
    <string name="current_annotations">Current Annotations</string>
    <string name="add_annotation">Add an Annotation</string>
    <string name="media_title">Upload Media</string>
    <string name="action_muted">muted</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search titles..</string>
    <string name="page_title">Page Title</string>
    <string name="image_content_description">An image</string>

    <!-- Create Story -->
    <string name="alert_story_exists">Story with the same title and author already exists! Do you want to overwrite the existing story?</string>
    <string name="new_story_hint">A New Story</string>
    <string name="story_desc_hint">Some Description… Blah, Blah, Blah</string>
    <string name="story_author">Author:  </string>
    <string name="story_date">Date:  </string>
    <string name="create_story">Create Story!!!</string>

    <!-- View Story -->
    <string name="written_by">Written By:  </string>
    <string name="some_author">some author</string>
    <string name="begin_story">Begin Story</string>
    <string name="menu_offline_library">Return To The Local Library</string>

    <!-- View Page -->
    <string name="page_desc_goes_here">page description goes here</string>
    <string name="make_decision">Now make your decision: </string>
    <string name="annotations_for_page">Annotations For This Page: </string>
    <string name="initial_annotation_count">0</string>
    <string name="view_annotations">View Annotations</string>

    <!-- Justin/Edit Story -->
    <string name="title_activity_main">MainActivity</string>
    <string name="create_new_page">Create New Page</string>
    <string name="return_local_lib">Return to Local Library</string>
    <string name=" menu_edit">Edit Page</string>
    <string name=" menu_delete">Delete Page</string>
    <string name="title_activity_edit_page">EditPageActivity</string>
    <string name="delete_page_confirm">Do you really want to delete this page?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Justin/Edit Page -->
    <string name="save_page_button">Save Page</string>
    <string name="insert_page_des">Insert Page Text</string>
    <string name="add_option">Add a New Option</string>
    <string name="title_activity_view_story">ViewStoryActivity</string>
    <string name="delete_option_confirm">Do you really want to delete this option?</string>

    <!-- Minhal/Edit Page -->
    <string name="alert_no_goto">You need to select a page for the option to go to!</string>
    <string name="title_activity_view_page">ViewPageActivity</string>
    <string name="add_decision">Add a decision</string>
    <string name="add_random_decision">Add a Random Decision</string>
    <string name="page_title_hint">A New Page</string>
    <string name="page_description_hint">Some Text… Blah Blah Blah"</string>

    <!-- Annotations Page -->
    <string name="annotation_author">Author: </string>
    <string name="annotation_author_hint">name here</string>
    <string name="annotation_comment">Comment: </string>
    <string name="annotation_comment_hint">comment here</string>
    <string name="annotation_submit">Submit</string>
    <string name="annotation_return_to_page">Return to Page</string>

    <!-- Offline Library -->
    <string name="local_library">Local Library</string>
    <string name="add_story">Add Story</string>
    <string name="online_library">Online Library</string>

    <!-- Online Library -->
    <string name="view_local_library">View Local Library</string>
    <string name="feeling_lucky">I\'m Feeling Lucky</string>

    <!-- Edit Options -->
    <string name="insert_option_description">Insert option description: </string>
    <string name="current_goto_page">Current GotoPage:</string>
    <string name="none">None</string>
    <string name="select_goto_page">Select Goto Page</string>
    <string name="save_option">Save Option</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>