<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) <2013>  <Zhao Zhang> -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/pageThumnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:padding="10dp"
        android:contentDescription="@string/image_content_description"
        android:src="@drawable/ic_launcher" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="0.27"
        android:background="@drawable/border" >

        <TextView
            android:id="@+id/pageDescriptionTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/page_desc_goes_here" />
    </ScrollView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/make_decision" />

    <ListView
        android:id="@+id/list_options"
        android:layout_width="280dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/border" >
    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity = "center"
        android:paddingTop = "10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annotations_for_page" />
        
        <TextView
            android:id="@+id/annotationCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_annotation_count" />

    </LinearLayout>

    <Button
        android:id="@+id/addAnnotationButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"

        android:onClick="launchAnnotationsActivity"
        android:text="@string/view_annotations" />

</LinearLayout>